<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A2VM</string>
    <string name="applicationName">A2VM</string>
    <string name="appDescription">Autuador Veicular via Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginField">Login:</string>
    <string name="passwordField">Senha:</string>
    <string name="buttonEnter">Entrar</string>
    <string name="buttonClean">Limpar</string>
    <string name="vehicleConsulting">Consulta de Autuações</string>
    <string name="vehicleCadastre">Cadastro de Autuações</string>
    <string name="textOrgao">Órg Autuador:</string>
    <string name="textSerie">Série:</string>
    <string name="infractionText">Nº Infração:</string>
    <string name="AutuationText">Autuação:</string>
    <string name="boardText">Placa:</string>
    <string name="consultButton">Consultar</string>
    <string name="vehicleModel">Modelo:</string>
    <string name="companyText">Marca:</string>
    <string name="propertyText">Proprietário:</string>
    <string name="yearText">Ano:</string>
    <string name="imageText">Imagem do Veículo:</string>
    <string name="captureText">Capturar</string>
    <string name="especieText">Espécie:</string>
    <string name="dateText">Data da Autuação:</string>
    <string name="hourText">Hora:</string>
    <string name="cadastreButton">Cadastrar</string>
    <string name="buttonBack">Menu</string>
    <string name="buttonCapture">Capturar</string>
    <string name="toCadastreText">Cadastro de Autuações</string>
    <string name="toInquiryText">Consulta de Autuações</string>
    <string name="logoutText">Log Out</string>
    
    <string-array name="year">
    	<item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
    	<item>1988</item>
    	<item>1989</item>
    	<item>1990</item>
    	<item>1991</item>
    	<item>1992</item>
    	<item>1993</item>
    	<item>1994</item>
    	<item>1995</item>
    	<item>1996</item>
    	<item>1997</item>
    	<item>1998</item>
    	<item>1999</item>
    	<item>2000</item>
    	<item>2001</item>
    	<item>2002</item>
    	<item>2003</item>
    	<item>2004</item>
    	<item>2005</item>
    	<item>2006</item>
  		<item>2007</item>
  		<item>2008</item>
  		<item>2009</item>
  		<item>2010</item>
  		<item>2011</item>
  		<item>2012</item>
  		<item>2013</item>
  		<item>2014</item>
  	</string-array>
    
    <string-array name="company">
        <item >Agrale</item>
        <item >Aston Martin</item>
        <item >Audi</item>
        <item >Bentley</item>
        <item >BMW</item>
        <item >Changan</item>
        <item >Cherry</item>
        <item >GM/Chevrolet</item>
        <item >Chrysler</item>
        <item >Citröen</item>
        <item >Dodge</item>
        <item >Effa</item>
        <item >Ferrari</item>
        <item >Fiat</item>
        <item >Ford</item>
        <item >Geely</item>
        <item >Hafei</item>
        <item >Honda</item>
        <item >Hyundai</item>
        <item >Iveco</item>
        <item >JAC Motors</item>
        <item >Jaguar</item>
        <item >Jeep</item>
        <item >Jinbei</item>
        <item >KIA</item>
        <item >Lamborghini</item>
        <item >Land Rover</item>
        <item >Lexus</item>
        <item >Lifan</item>
        <item >Mahindra</item>
        <item >Maseratti</item>
        <item >Mercedes-Benz</item>
        <item >MG Motors</item>
        <item >Mini</item>
        <item >Mitsubishi</item>
        <item >Nissan</item>
        <item >Peugeot</item>
        <item >Porsche</item>
        <item >Ram</item>
        <item >Renault</item>
        <item >Smart</item>
        <item >Ssangyong</item>
        <item >Subaru</item>
        <item >Suzuki</item>
        <item >Toyota</item>
        <item >Troller</item>
        <item >Volkswagen</item>
        <item >Volvo</item>
    </string-array>
    
    <string-array name="agraleModels">
        <item >AM100</item>
        <item >AM100 CD</item>
        <item >AM150</item>
        <item >AM150 CD</item>
        <item >AM200</item>
        <item >AM200 CD</item>
        <item >AM200 Microbus</item>
        <item >AM300</item>
    </string-array>
    
    <string-array name="astonmartinModels">
        <item >V8 Vantage</item>
        <item >V8 Vantage S</item>
        <item >V12 Vantage</item>
        <item >V12 Vantage Roadster</item>
        <item >Vantage N430</item>
        <item >DB9</item>
        <item >DB9 Carbon Edition</item>
        <item >Rapide S</item>
        <item >Vanquish</item>
        <item >Vanquish Volante</item>
    </string-array>
    
    <string-array name="audiModels">
        <item >A1</item>
        <item >A1 Sport</item>
        <item >A1 Sportback</item>
        <item >A3 Sport</item>
        <item >A3 Sportback</item>
        <item >A3 Sedan</item>
        <item >A4 Sedan</item>
        <item >A4 Avant</item>
        <item >S4 Sedan</item>
        <item >S4 Avant</item>
        <item >RS4 Avant</item>
        <item >A5 Coupé</item>
        <item >A5 Sportback</item>
        <item >A5 Cabriolet</item>
        <item >S5 Coupé</item>
        <item >S5 Sportback</item>
        <item >S5 Cabriolet</item>
        <item >RS5 Coupé</item>
        <item >A6 Sedan</item>
        <item >A6 Avant</item>
        <item >A6 Allroad Quattro</item>
        <item >S6 Avant</item>
        <item >S6 Sedan</item>
        <item >R55 Coupé</item>
        <item >A7 Sportback</item>
        <item >S7 Sportback</item>
        <item >A8</item>
        <item >A8LW12</item>
        <item >S8</item>
        <item >Q3</item>
        <item >Q5</item>
        <item >Q7</item>
        <item >R8 V10 Plus</item>
    </string-array>
    
    <string-array name="bentleyModels">
        <item >Bentley SUV</item>
        <item >Bentley Mulsanne</item>
        <item >Bentley New Flying Spur</item>
        <item >Continenetal GT</item>
        <item >Continental GT Convertible</item>
    </string-array>
    
    <string-array name="bmwModels">
        <item >Serie 1 116i</item>
        <item >Serie 1 118i</item>
        <item >Serie 1 125i M Sport</item>
        <item >Serie 1 M135</item>
        <item >Serie 3 315i</item>
        <item >Serie 3 320i</item>
        <item >Serie 3 328i</item>
        <item >Serie 3 320i GT Sport</item>
        <item >Serie 3 328i GT M Sport</item>
        <item >Serie 3 335i M Sport</item>
        <item >Serie 5 528i M Sport</item>
        <item >Serie 5 538i M Sport</item>
        <item >Serie 6 640i</item>
        <item >Serie 6 650i</item>
        <item >Serie 7 750i M Sport</item>
        <item >X1 sDrive 18i</item>
        <item >X1 sDrive 20i</item>
        <item >X3 xDrive 20i</item>
        <item >X3 xDrive 28i</item>
        <item >X3 sDrive 35i M Sport</item>
        <item >X5 xDrive 50i</item>
        <item >X6 xDrive 50i</item>
        <item >x6 M</item>
        <item >Z4 Roadster</item>
        <item >M5</item>
        <item >M6 Grand Coupé</item>
        <item >M6 Coupé</item>
        <item >X6 M</item>
    </string-array>
    
    <string-array name="changanModels">
        <item >Mini Star CS</item>
        <item >Star CS</item>
        <item >Star Family</item>
        <item >Star Utility</item>
        <item >Mini Star CE</item>
    </string-array>
    
    <string-array name="cherryModels">
        <item >Tiggo</item>
        <item >Celer</item>
        <item >QQ</item>
        <item >Face</item>
    </string-array>
    
    <string-array name="gmModels">
        <item >Agile</item>
        <item >Camaro</item>
        <item >Celta</item>
        <item >Classic</item>
        <item >Cobalt</item>
        <item >Cruze</item>
        <item >Cruze Sport</item>
        <item >Onix</item>
        <item >Prisma</item>
        <item >Sonic Sedan</item>
        <item >Sonic Hatch</item>
        <item >Captiva</item>
        <item >TrailBlazer</item>
        <item >Montana</item>
        <item >S10 Cabine Dupla</item>
        <item >S10 Cabine Simples</item>
        <item >Tracker</item>
        <item >Spin</item>
        <item >Volt</item>
    </string-array>
    
    <string-array name="cryslerModels">
        <item >300C</item>
        <item >Town and Country Limited</item>
        <item >Town and Country Touring</item>
    </string-array>
	
    <string-array name="citroenModels">
        <item >C3</item>
        <item >C3 Picasso</item>
        <item >AirCross</item>
        <item >C4</item>
        <item >C4 Lounge</item>
        <item >C4 Picasso</item>
        <item >Grand C4 Picasso</item>
        <item >DS3</item>
        <item >DS4</item>
        <item >DS5</item>
        <item >Jumper Vetrato</item>
        <item >Jumper Furgão</item>
        <item >Jumper Mini-Bus</item>
    </string-array>	
    
    <string-array name="dodgeModels">
        <item >Avenger</item>
        <item >Challenger</item>
        <item >Charger</item>
        <item >Dart</item>
        <item >Durango</item>
        <item >Journey</item>
        <item >Grand Caravan</item>
        <item >SRT</item>
    </string-array>
    
    <string-array name="effaModels">
        <item >Picape Start Longa</item>
        <item >Picape Start Cabine Dupla</item>
        <item >Van Start</item>
        <item >Caminhão EFFA JBC</item>
        <item >Caminhão EFFA JMC N601</item>
        <item >Caminhão EFFA JMC N900</item>
        <item >Picape Plutus</item>
        <item >Picape/Longa</item>
        <item >Picape Baú</item>
        <item >Furgão/EFFA</item>
        <item >Van EFFA</item>
        <item >Picape Cabine Dupla EFFA</item>
        <item >EFFA M100</item>
    </string-array>
    
    <string-array name="ferrariModels">
        <item >F12 Berlinetta</item>
        <item >FF</item>
        <item >LaFerrari</item>
        <item >Ferrari California T</item>
        <item >458 Italia</item>
        <item >458 Spider</item>
        <item >458 Speciale</item>
    </string-array>
    
    <string-array name="fiatModels">
        <item >UNO</item>
        <item >Palio Fire</item>
        <item >Palio</item>
        <item >Punto</item>
        <item >Bravo</item>
        <item >Fiat 500</item>
        <item >Siena</item>
        <item >Grand Siena</item>
        <item >Linea</item>
        <item >Palio Weekend</item>
        <item >Fiat Adventure</item>
        <item >Strada</item>
    </string-array>
     
</resources>