<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFE0"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appDescription"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/toCadastreButton"
        style="@style/buttonStyle"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:text="@string/toCadastreText"
        android:textStyle="bold" />

    <Button
        android:id="@+id/toInquiryButton"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/toInquiryText"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/logoutText"
        android:textStyle="bold" />

</LinearLayout>