<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFE0"
    tools:context=".MainActivity" >
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
    </ScrollView>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignRight="@+id/scrollView1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/boardText"
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.34"
            android:text="@string/boardText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/boardEditText"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="-25dp"
            android:ems="10"
            android:inputType="text" >
            <requestFocus />
        </EditText>

	</LinearLayout>

    <Button
        android:id="@+id/consultButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/consultButton"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/captureButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/consultButton"
        android:layout_alignBottom="@+id/consultButton"
        android:layout_centerHorizontal="true"
        android:text="@string/captureText"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cleanButtonInquiry"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/captureButton"
        android:layout_alignBottom="@+id/captureButton"
        android:layout_alignRight="@+id/linearLayout1"
        android:text="@string/buttonClean"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/consultButton"
        android:layout_below="@+id/consultButton"
        android:layout_marginTop="18dp"
        android:text="@string/vehicleModel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:layout_alignLeft="@+id/modelText"
        android:layout_below="@+id/modelText"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:layout_alignBaseline="@+id/EditText01"
        android:layout_alignBottom="@+id/EditText01"
        android:layout_alignRight="@+id/cleanButtonInquiry"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/companyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/modelText"
        android:layout_alignBottom="@+id/modelText"
        android:layout_alignLeft="@+id/EditText02"
        android:text="@string/companyText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="16dp"
        android:text="@string/yearText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toLeftOf="@+id/cleanButtonInquiry"
        android:text="@string/propertyText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText04"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/EditText02"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_below="@+id/EditText03"
        android:layout_marginTop="14dp"
        android:text="@string/imageText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollView1"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/EditText04"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_launcher" android:contentDescription="@string/applicationName"/>
	    
</RelativeLayout>